modal fix: overflow
- overflow-y: scroll - forces overflow-x: hidden
- we want to show scroll bars

--- a/less/components/Modal.less
+++ b/less/components/Modal.less
@@ -133,7 +133,7 @@
 .Modal-body {
 	margin: 0;
 	max-height: 400px;
-	overflow-y: scroll;
+	overflow: scroll;
 	padding: @modal-padding-vertical @modal-padding-horizontal;
 	-webkit-overflow-scrolling: touch;
 }
